--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 
     <body>
         <h1>Welcome to Odin Recipes!</h1>
+        <h2>Recipes list</h2>
+        <ul>
+            <li><a href="./recipes/flan-napolitano.html">Flan Napolitano</a></li>
+        </ul>
     </body>
 </html>
