--- a/recipes/flan-napolitano.html
+++ b/recipes/flan-napolitano.html
@@ -7,6 +7,7 @@
     </head>
     
     <body>
+        <p><a href="../index.html">⬅Back to Home</a></p>
         <h1>Flan Napolitano</h1>
     </body>
 </html>
