--- a/recipes/flan-napolitano.html
+++ b/recipes/flan-napolitano.html
@@ -9,5 +9,7 @@
     <body>
         <p><a href="../index.html">⬅Back to Home</a></p>
         <h1>Flan Napolitano</h1>
+        <img src="../images/flan.jpg" alt="Picture of a delicious flan">
+        <h2>Description</h2>
     </body>
 </html>
