Fix flan picture width and add content
Fix the size with the picture inside flan-napolitano.html
and add the recipe's content, like description, ingredients,
and steps to follow.

--- a/recipes/flan-napolitano.html
+++ b/recipes/flan-napolitano.html
@@ -9,7 +9,27 @@
     <body>
         <p><a href="../index.html">⬅Back to Home</a></p>
         <h1>Flan Napolitano</h1>
-        <img src="../images/flan.jpg" alt="Picture of a delicious flan">
-        <h2>Description</h2>
+        <img src="../images/flan.jpg" alt="Picture of a delicious flan" width="450">
+        <h2>Description:</h2>
+        <p>Flan napolitano is a popular Mexican take on the classic <em>flan</em> or <em>crème caramel</em> dessert. It's creaminess and sweetness makes it a favorite in the country. The ingredients needed to make this dessert are easy to find, and the steps to follow are fairly simple.</p>
+        <p>If you have a sweet tooth, you won't regret making it!</p>
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>1 cup of white sugar</li>
+            <li>1 can of condensed milk</li>
+            <li>1 can of evaporated milk</li>
+            <li>6 medium eggs</li>
+            <li>1 cream cheese bar</li>
+            <li>1 teaspoon of vanilla extract</li>
+        </ul>
+        <h2>Steps:</h2>
+        <ol>
+            <li>Preheat your oven at 180 °C (356 °F) for 10-15 minutes.</li>
+            <li>In a aluminum oven mould or <em>flanera</em>, put the white sugar cup and heat it until it becomes a golden liquid. This will be our caramel, so be careful not to burn it. Reserve.</li>
+            <li>Mix all the ingredients in a blender and pour your blend inside the aluminum mould with the caramel and cover it with tin foil.</li>
+            <li>Put the mould in an oven-proof pyrex glass roaster with warm water. The water must reach half of the aluminum mould. Depending of your oven power, bake around 45 minutes or 1 hour.</li>
+            <li>Take it out from the oven and let it cool enough to put it inside the fridge. Let it sit for around 4 hours or overnight in the fridge.</li>
+            <li>Cut in slices and serve. Enjoy!</li>
+        </ol>
     </body>
 </html>
