--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h1>Welcome to Odin Recipes!</h1>
         <h2>Recipes list</h2>
         <ul>
+            <li><a href="./recipes/lentil-soup.html">Lentil Soup</a></li>
+            <li><a href="./recipes/green-spaguetti.html">Green Spaghetti</a></li>
             <li><a href="./recipes/flan-napolitano.html">Flan Napolitano</a></li>
         </ul>
     </body>
