--- a/recipes/green-spaghetti.html
+++ b/recipes/green-spaghetti.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <p><a href="../index.html">⬅Back to Home</a></p>
         <h1>Green Spaghetti</h1>
     </body>
 </html>
