--- a/recipes/lentil-soup.html
+++ b/recipes/lentil-soup.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <p><a href="../index.html">⬅Back to Home</a></p>
         <h1>Lentil Soup</h1>
     </body>
 </html>
