Add pictures and recipes
Add lentil soup and green spaghetti pictures in the images
directory, and add images, description, ingredients and steps for
the lentil-soup.html and green-spaghetti.html.

--- a/recipes/green-spaghetti.html
+++ b/recipes/green-spaghetti.html
@@ -9,5 +9,31 @@
     <body>
         <p><a href="../index.html">⬅Back to Home</a></p>
         <h1>Green Spaghetti</h1>
+        <img src="../images/green-spaghetti.jpg" alt="Picture of green spaghetti" width="450">
+        <h1>Description:</h1>
+        <p>This delicious spaghetti stands out because of its creaminess and rich flavor. It's not only a pleasure to the palate, but it's also healthy. This recipe in special is for multiple servings, but you can halve the ingredients if you want a smaller batch.</p>
+        <p>Either alone or accompanied with other dishes, a good spaghetti is always a star.</p>
+        <h1>Ingredients:</h1>
+        <ul>
+            <li>500 grams of spaghetti pasta</li>
+            <li>A bunch of spinach</li>
+            <li>3 <em>chiles poblanos</em></li>
+            <li>1 cup of chicken broth</li>
+            <li>1 can of table cream</li>
+            <li>1 can of evaporated milk</li>
+            <li>1/3 of a big onion, finely chopped</li>
+            <li>1 tablespoon of butter</li>
+            <li>1 tablespoon of vegetable oil</li>
+            <li>Salt and water</li>
+        </ul>
+        <h1>Steps:</h1>
+        <ol>
+            <li>In a big pot, boil a generous amount of water and add salt. When the water has reached boiling point, add the spaghetti pasta. Cook the pasta until it's <em>al dente</em> and drain the water.</li>
+            <li>In another pot, boil the spinach, and heat the <em>chiles</em> directly in the burner fire (this is called <em>tatemar</em> in Spanish).</li>
+            <li>Once the spinach is soft, let it cool or cool it with ice, and put the burnt <em>chiles</em> in a ziploc bag for around 15 minutes.</li>
+            <li>Remove the seeds and veins of the <em>chiles</em>, and add them with the spinach, the chicken broth, the table cream and the evaporated milk into a blender. Mix it until all the ingredients are integrated.</li>
+            <li>In a big pot, heat the butter and oil and add the chopped onion. When the onion becomes transparent, add the spinach cream and let it boil.</li>
+            <li>Add the cooked spaghetti into the cream, cook for a bit and serve. Enjoy!</li>
+        </ol>
     </body>
 </html>
