--- a/recipes/lentil-soup.html
+++ b/recipes/lentil-soup.html
@@ -9,5 +9,33 @@
     <body>
         <p><a href="../index.html">⬅Back to Home</a></p>
         <h1>Lentil Soup</h1>
+        <img src="../images/lentil-soup.jpg" alt="Picture of a lentil soup" width="450">
+        <h1>Description:</h1>
+        <p>Nothing beats a good lentil soup in cold days, or in warm days... or everyday!</p>
+        <p>This version of lentil soup involves a bit of work, but the end result is worth it. I can guarantee it.</p>
+        <h1>Ingredients:</h1>
+        <ul>
+            <li>250 grams of clean lentils</li>
+            <li>Two finely chopped tomatoes</li>
+            <li>1/3 of a big onion, finely chopped</li>
+            <li>1 tablespoon of butter</li>
+            <li>1 tablespoon of oil of your preferences</li>
+            <li>1 small bottle of tomato sauce</li>
+            <li>1 cup of chicken broth</li>
+            <li>150 grams of bacon</li>
+            <li>1 medium pieces of <em>chorizo</em></li>
+            <li>250 grams of sausages</li>
+            <li>3 boiled and peeled eggs</li>
+            <li>1 ripe plantain (or <em>plátano macho</em>)</li>
+            <li>A bunch of <em>Cilantro</em> (optional)</li>
+        </ul>
+        <h1>Steps:</h1>
+        <ol>
+            <li>In a pan, put the butter and oil so the butter doesn't burn and cook the chopped onion and tomatoes. Reserve.</li>
+            <li>Chop the bacon, the sausages and the plantain. Cook the bacon and sausages and reserve.</li>
+            <li>In a big pot, boil the lentils until they're soft.</li>
+            <li>Add the tomato sauce, onion, tomatoes, bacon, sausages, the eggs and plantain into the lentil pot. If you want, add cilantro for extra flavor and cook for a bit more until the plantain is soft.</li>
+            <li>Serve your portions in a bowl and enjoy!</li>
+        </ol>
     </body>
 </html>
